versioned_docs/version-1.0/self-hosted/aks.mdx
---
title:  Azure Kubernetes Service (AKS)
description: How to install Okteto onto Azure Kubernetes Service (AKS)
id: aks
---

This guide will show you how to install Okteto onto Azure Kubernetes Service (AKS). We'll be focusing exclusively on AKS in order to keep it as simple as possible.

## Requirements

In order to fully install Okteto, you'll need the following:

- A subdomain to which you can add a wildcard DNS record
- A Kubernetes cluster
- A working installation of kubectl
- A working installation of Helm v3
- An OAuth application
- An Azure Storage Container
- An Okteto license (optional)

### Subdomain

You'll need access to an internet accessible subdomain to which you can add a wildcard DNS record, such as dev.example.com.

This guide will assume that your domain is registered in [AzureDNS](https://docs.microsoft.com/en-us/azure/dns/dns-overview). Other DNS services can be used, but aren't covered here.

### Deploy a Kubernetes cluster

We recommend that you follow Azure's [cluster creation guide](https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough).
Okteto supports Kubernetes versions 1.21 through 1.23.

We recommend the following specs:
- v1.23
- A pool with at least 3 `Standard D4` nodes
- 250 GB per Standard SSD Managed Disk

You'll be using the cluster's API server endpoint when configuring Okteto.

### Installing kubectl

Follow Azure's documentation for [installing kubectl](https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough#connect-to-the-clusterl). Once installed, configure `kubectl` to talk to your new cluster.

### Installing Helm v3

Follow the official documentation for [installing the latest release of Helm v3](https://helm.sh/docs/intro/install/).

### Creating the OAuth application

> Okteto supports OAuth providers like Google, GitHub, or OpenID Connect to handle user authentication. For this guide, we'll focus on using GitHub. All the supported configuration settings [are described here](/docs/self-hosted/administration/configuration/#auth).

Follow GitHub's official documentation on [how to create an OAuth App](https://developer.github.com/apps/building-oauth-apps/creating-an-oauth-app/).

When creating the OAuth App, you will need to provide the following values:

**Homepage URL**:
```
https://okteto.DOMAIN
```

**Authorization callback URL**:
```
https://okteto.DOMAIN/auth/callback
```

You'll use the `Client ID` and `Client Secret` when installing Okteto.

### Creating an Azure Storage Container

Okteto uses a storage container to store your private images. Follow Azure's [guide on how to create a storage container](https://docs.microsoft.com/en-us/azure/storage/blobs/storage-blobs-introduction). Create the bucket in the region as your AKS cluster, and keep it private.

You'll need the Account Name and a Storage Account Key when installing Okteto.

## Adding the Okteto Helm repository

You'll need to add the Okteto repository in order to be able to install Okteto:

```console
helm repo add okteto https://charts.okteto.com
helm repo update
```

### Getting your Okteto License

Okteto is free for small teams. You get all the features of [Okteto](https://www.okteto.com/free-trial/) for up to 3 users with 3 namespaces each.

Want to use Okteto with a bigger team? [Let's talk](https://okteto.com/#talktous)

## Installing Okteto

### Create the Okteto Namespace

Run the following command to create a namespace to install Okteto in:

```console
$ kubectl create namespace okteto
```

### Configuring your Okteto instance

Create a Kubernetes secret with the Storage Account Access Key you created before:

```console
kubectl create secret generic okteto-cloud-secret --namespace=okteto --from-literal=key=STORAGE_ACCOUNT_ACCESS_KEY
```

Download a copy of the [Okteto AKS configuration file](https://www.okteto.com/docs/self-hosted/aks/config.yaml), open it, and update the following values:

- Your `email`
- Your `license` (optional)
- A `subdomain`
- `clientId` and `clientSecret` of the OAuth Application you created
- Your cluster's API server endpoint
- The name of the `storage container` you created
- The `Storage Account Name`

For example:

```yaml
email: admin@example.com
license: 1234567890ABCD==
subdomain: dev.example.com
cluster:
  endpoint: "https://XXXXXX.aks.microsoft.com"

auth:
  github:
    enabled: true
    clientId: ae8924d074d8c8809999
    clientSecret: ABCD90598b706d5342f07cce18fee5e5da391234

cloud:
  provider:
    azure:
      enabled: true
      storage:
        container: "okteto-container"
        accountName: "okteto-storage-account"

buildkit:
  ingress:
    enabled: false
  service:
    type: LoadBalancer
```

### Installing your Okteto instance

Install the latest version of Okteto by running:

```console
helm install okteto okteto/okteto -f config.yaml --namespace=okteto
```

After a few seconds, all the resources will be created. The output will look something like this:

```

Release "okteto" has been installed. Happy Helming!
NAME: okteto
LAST DEPLOYED: Thu Mar 26 18:07:55 2020
NAMESPACE: okteto
STATUS: deployed
REVISION: 1
TEST SUITE: None
NOTES:
1. Create the following DNS record, pointing it to the NGINX controller service External-IP:
- "*.dev.example.com"

You can retrieve the External IP by running:
    kubectl get service -l=app.kubernetes.io/name=ingress-nginx,app.kubernetes.io/component=controller --namespace=okteto

2. Create the following DNS record, pointing it to the Buildkit service External-IP:
- "buildkit.dev.example.com"

You can retrieve the External IP by running:
    kubectl get service -l=app.kubernetes.io/instance=okteto,app.kubernetes.io/component=buildkit --namespace=okteto

3. Once you create both DNS entries you can access your Okteto instance at this URL:
https://okteto.dev.example.com
```

> You can also install a specific version by including the `--version` argument.

### Retrieve the Ingress Controller IP address

We can use the instructions `kubectl` to fetch the address that has been dynamically allocated by AKS to the NGINX Ingress we've just installed and configured as a part of Okteto:

```console
kubectl get service -l=app.kubernetes.io/name=ingress-nginx,app.kubernetes.io/component=controller --namespace=okteto
```

The output will look something like this:

```
NAME                             TYPE           CLUSTER-IP   EXTERNAL-IP                          PORT(S)                                     AGE
okteto-ingress-nginx-controller  LoadBalancer   10.0.7.73    a519c8b3b27f94...aks.microsoft.com   80:30795/TCP,443:32481/TCP,1234:30885/TCP   5m
```

You'll need to take the `EXTERNAL-IP` address and add it to your DNS for the domain you have chosen to use. In AzureDNS, this is done by creating an `A` record with the name  `*`, pointing to the IP of the Load Balancer.

### Retrieve the Buildkit IP address

You can use `kubectl` to fetch the address that has been dynamically allocated by AKS to the Buildkit instance you've just installed and configured as a part of Okteto:

```console
kubectl get service -l=app.kubernetes.io/instance=okteto,app.kubernetes.io/component=buildkit --namespace=okteto
```

The output will look something like this:

```
NAME                TYPE           CLUSTER-IP      EXTERNAL-IP                           PORT(S)          AGE
okteto-buildkit     LoadBalancer   10.245.142.73   a519c8b3b27f95...aks.microsoft.com    1234:32449/TCP   5m
```

You'll need to take the `EXTERNAL-IP` address, and add it to your DNS for the domain you have chosen to use. This is done by creating an `A` record with the name `buildkit`.

## Sign in to your Okteto instance

> **Important**: The default installation uses self-signed certificates. We strongly recommend that you  configure Okteto to [bring your own certificates](/docs/self-hosted/administration/certificates/) before giving your team access to your instance.

You can access your Okteto instance at `https://okteto.SUBDOMAIN`. Your account will be automatically created as part of the login process. The first user to successfully log into the instance will be automatically assigned the `administrator` role.
